Correctly align navigation bar links

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -51,7 +51,7 @@ nav a {
   padding:0;
   list-style-type: none;
   display:flex;
-  align-items: center;
+  align-items:flex-end;
 }
 
 .column {
